--- a/src/app/dashboard/components/navbar/Navbar.module.css
+++ b/src/app/dashboard/components/navbar/Navbar.module.css
@@ -1,7 +1,7 @@
 .wrapper{
   margin-bottom: rem(5px);
   @mixin dark {
-    background-color:  var(--mantine-color-gray-8);
+    background-color:  var(--mantine-color-dark-8);
   }
   @mixin light {
     background-color:  var(--mantine-color-gray-1);
