--- a/src/app/dashboard/components/table/RichTable.module.css
+++ b/src/app/dashboard/components/table/RichTable.module.css
@@ -2,8 +2,21 @@
     width: rem(5);
 }
 
+.topActions{
+    display: flex;
+}
+
 .sortable {
     margin-right: rem(7);
     position: relative;
     top: rem(5);
+}
+
+.pageSize{
+    width: 70px;
+    margin-left: rem(5);
+}
+
+.search{
+    width: 200px;
 }
